Add auto features

--- a/fooocus_colab_auto.ipynb
+++ b/fooocus_colab_auto.ipynb
@@ -12,7 +12,7 @@
     "!dpkg -i cloudflared-linux-amd64.deb\n",
     "!pip install pygit2==1.12.2\n",
     "%cd /content\n",
-    "!git clone https://github.com/rafaleon15/Fooocus.git"
+    "!git clone https://github.com/rafaleon15/Fooocus2.git"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "source": [
     "!rsync -ah --progress /content/drive/MyDrive/models/juggerV9/juggernautXL_v8Rundiffusion.safetensors /content/Fooocus/models/checkpoints/\n",
     "%cd /content/Fooocus\n",
-    "!python entry_with_update.py --share"
+    "!python entry_with_update.py --share --always-high-vram"
    ]
   }
  ],
